--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.android.hacktiv8"
+        applicationId "com.belajar.android"
         minSdk 21
         targetSdk 32
         versionCode 1
