--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,7 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".IntentApp2"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".IntentApp"
+            android:name=".HacktivSesi6_view"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +23,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RadioButtons"
+            android:name=".HacktivSesi6"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".IntentApp2"
+            android:exported="true" />
+        <activity
+            android:name=".IntentApp"
             android:exported="true">
 
             <!-- <intent-filter> -->
@@ -38,7 +49,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".RadioButtons"
             android:exported="true">
 
             <!-- <intent-filter> -->
