--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,11 @@
         <activity
             android:name=".CounterHomework"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <activity
             android:name=".HacktivLayoutViewConstraint"
@@ -44,7 +44,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".HacktivLayoutView"
+            android:name=".HacktivLayoutViewLinear"
             android:exported="true">
 
             <!-- <intent-filter> -->
@@ -57,14 +57,9 @@
         <activity
             android:name=".HacktivSesi6_view"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:name=".HacktivSesi6"
+            android:name=".HacktivSesi6_main"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
