java android hacktiv kelas ke-6 membahas user experiences

--- a/hacktiv8/src/main/AndroidManifest.xml
+++ b/hacktiv8/src/main/AndroidManifest.xml
@@ -13,19 +13,24 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication"
+        android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
+        <activity
+            android:name=".DelightfulUserExperiences"
+            android:exported="true" />
         <activity
             android:name=".UserInteraction2"
             android:exported="false" />
         <activity
             android:name=".UserInteraction"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".CounterHomework"
