--- a/udemy/src/main/AndroidManifest.xml
+++ b/udemy/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".ScrollView"
+            android:exported="true" />
+        <activity
             android:name=".GridView"
             android:exported="true" />
         <activity
