--- a/udemy/src/main/AndroidManifest.xml
+++ b/udemy/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".SecondActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ActivityLifecycle"
+            android:exported="true" />
+        <activity
             android:name=".ApplicationLifecycle"
             android:exported="true" />
         <activity
