--- a/hacktiv8/src/main/AndroidManifest.xml
+++ b/hacktiv8/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
         android:theme="@style/Theme.AppCompat.DayNight"
         tools:targetApi="31">
         <activity
+            android:name=".NotificationTestMain"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <receiver android:name=".NotificationTestReceiver"
+            android:exported="true">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT">
+
+                </category>
+            </intent-filter>
+        </receiver>
+<!--        -->
+        <activity
             android:name=".SQLiteMainActivity"
             android:exported="true" />
         <activity
